tests/e2e/not_allowed/module.error
Error: syntax error in story at line 1, column 1

1|    module = 1
      ^^^^^^

E0030: `module` is reserved for future use
